Add construction banner and update README

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+    <div style="background-color: #ffcc00; color: #333; padding: 10px; text-align: center; font-weight: bold;">
+        🚧 This site is still under construction. Thanks for your patience! 🚧
+    </div>
     <header class="hero-section">
         <div class="=container">
             <div calss="logo">Breath<span>Natural</span></div>
@@ -51,7 +54,9 @@
                     <button class="buynow"> Buy now</button>
                 </div>
             </div>
-            <div></div>
+            <div>
+
+            </div>
             <div></div>
             <div></div>
             <div></div>
